# vto-product-recontext

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  COMPREHENSIVE_GUIDE.md  LICENSE  Makefile  README.md  README_IMPLEMENTATION.md  main.py  main_product_recontext.py  pyproject.toml
.github/workflows/: test.yml
image_folder/: img_conversion_table.csv  sample_table.csv  test_three_records.csv  test_trial.csv
scripts/: run_example.py  setup_env.sh  setup_gcloud.sh  verify_setup.sh
src/bulk_image_processor/: __init__.py  __main__.py  analyzer.py  config.py  downloader.py  exceptions.py  main.py  main_pipeline.py  storage.py  utils.py
src/bulk_image_processor/processors/: __init__.py  base.py  product_recontext.py  virtual_try_on.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_config.py  test_downloader.py  test_exceptions.py  test_integration.py  test_main.py  test_processors.py  test_storage.py  test_utils.py
